# logmask-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  postCreateScript.sh
.github/workflows/: docker-img-push.yaml  huggingface-push.yaml  huggingface-test.yaml
.streamlit/: config.toml
dockerfiles/: Dockerfile.alpine
src/: _const.py  app.py  helpers.py  nlp_engine_config.py
src/logmask_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_helpers.py  test_streamlit.py
