[project]
name = "logmask-ai"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "litellm[proxy]>=1.83.8",
  "presidio-analyzer[transformers]>=2.2.362",
  "presidio-anonymizer>=2.2.362",
  "spacy>=3.8.14",
  "st-annotated-text>=4.0.2",
  "streamlit>=1.56.0",
  "streamlit-tags>=1.2.8",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.3",
]
